--- a/Kinematic 6DOF Demo/.godot/editor/editor_layout.cfg
+++ b/Kinematic 6DOF Demo/.godot/editor/editor_layout.cfg
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://level.tscn", "res://player/cubio.tscn")
-current_scene="res://level.tscn"
+current_scene="res://player/cubio.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -38,14 +38,14 @@ selected_bottom_panel_item=0
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(66, 122)
+mode="maximized"
+position=Vector2i(0, 25)
 size=Vector2i(1920, 993)
 
 [ScriptEditor]
 
 open_scripts=["res://player/cubio.gd", "res://player/follow_camera.gd"]
-selected_script="res://player/cubio.gd"
+selected_script="res://player/follow_camera.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
