--- a/Kinematic Airplane Demo/.godot/editor/editor_layout.cfg
+++ b/Kinematic Airplane Demo/.godot/editor/editor_layout.cfg
@@ -28,18 +28,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://level.tscn", "res://player/cubio.tscn", "res://models/mushroom.glb")
-current_scene="res://level.tscn"
+open_scenes=PackedStringArray("res://level.tscn", "res://player/cubio.tscn")
+current_scene="res://player/cubio.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [EditorWindow]
 
 screen=0
-mode="windowed"
-position=Vector2i(35, 25)
+mode="maximized"
+position=Vector2i(0, 25)
 size=Vector2i(1920, 993)
 
 [ScriptEditor]
